Avoid page tobe too wide on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ body {
   color: var(--text-color);
 }
 .main {
+  width: 100%;
   max-width: 1200px;
   margin: 0 auto;
   padding: 46px 16px;
